--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.0.1"
 djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 python-decouple = "^3.8"
+django-filter = "^23.3"
 
 
 [build-system]
