--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^1.0.0"
 python-decouple = "^3.8"
 django-filter = "^23.3"
+djangorestframework-simplejwt = "^5.3.0"
 
 
 [build-system]
