--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python-dotenv = "^1.0.0"
 python-decouple = "^3.8"
 django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
+coverage = "^7.3.2"
 
 
 [build-system]
