--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ python-decouple = "^3.8"
 django-filter = "^23.3"
 djangorestframework-simplejwt = "^5.3.0"
 coverage = "^7.3.2"
+drf-yasg = "^1.21.7"
+django-cors-headers = "^4.3.0"
+requests = "^2.31.0"
 
 
 [build-system]
