--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ coverage = "^7.3.2"
 drf-yasg = "^1.21.7"
 django-cors-headers = "^4.3.0"
 requests = "^2.31.0"
+stripe = "^7.0.0"
 
 
 [build-system]
