added celery, celery-beat; added funcs of sending mails to subscribers about updates to courses and lessons; added last_login check func

--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,15 @@ ENGINE_DB=django.db.backends.postgresql
 NAME_DB=drf_project
 USER_DB=
 PASSWORD_DB=
+
+# email
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+EMAIL_USE_TLS=0
+EMAIL_USE_SSL=1
+
+# Stripe
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
