--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ requests = "^2.31.0"
 stripe = "^7.0.0"
 celery = "^5.3.4"
 redis = "^5.0.1"
-crontab = "^1.0.1"
+docker = "^7.0.0"
+django-celery-beat = "^2.5.0"
+python-crontab = "^3.0.0"
 
 
 [build-system]
