added docker update

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,13 +13,13 @@ services:
         environment:
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: 1234
-            POSTGRES_DB: drf_project
+            POSTGRES_DB: postgres
         volumes:
             - pg_data:/var/lib/postgresql/data/
         ports:
-            - "5434:5432"
+            - "5432:5432"
         healthcheck:
-            test: pg_isready -U postgres -d drf_project
+            test: pg_isready -U postgres -d postgres
             interval: 3s
             timeout: 3s
             retries: 10
@@ -27,9 +27,7 @@ services:
     app:
         build: .
         tty: true
-        command: sh -c "python manage.py migrate && python manage.py runserver 127.0.0.1:8000"
-        volumes:
-            - .:/code
+        command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
         ports:
             - "8000:8000"
         depends_on:
@@ -50,7 +48,7 @@ services:
         build: .
         restart: always
         tty: true
-        command: celery -A config beat -l INFO -S django
+        command: celery -A config beat -l INFO
         volumes:
             - .:/code
         depends_on:
