--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
         tty: true
         command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
         ports:
-            - "8000:8000"
+            - "8001:8000"
         depends_on:
             db:
                 condition: service_healthy
@@ -54,6 +54,13 @@ services:
         depends_on:
             - app
             - redis
+
+    portainer:
+        image: portainer/portainer
+        ports:
+            - "9000:9000"
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
 
 volumes:
   pg_data:
