--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ redis = "^5.0.1"
 docker = "^7.0.0"
 django-celery-beat = "^2.5.0"
 python-crontab = "^3.0.0"
+gunicorn = "^21.2.0"
 
 [build-system]
 requires = ["poetry-core"]
