--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ deploy:
   only:
     - main
   tags:
-    - dev
+    - docker
 
 #curl -L "https://packages.gitlab.com/install/repositories/runner/gitlab-runner/script.deb.sh" | sudo bash
 #sudo -E apt-get install gitlab-runner
